compiler/test-data/parser/types/errors/asset_initializer.frel
module test

theme BadTheme {
    primary : asset Color = #FFFFFF
}
